<resources>
    <string name="app_name">FormApp</string>
    <string name="choose_gender">Pilih Jenis Kelamin</string>

    <string name="name_hint">Nama</string>
    <string name="email_hint">Email</string>
    <string name="terms_and_conditions_label">Saya setuju dengan syarat dan ketentuan</string>
    <string name="submit_label">Submit</string>

    <string name="name_label">Nama:</string>
    <string name="email_label">Email:</string>
    <string name="gender_label">Jenis Kelamin:</string>
    <string name="terms_agreed_label">Setuju dengan Syarat:</string>
</resources>
